// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`literal > array of literals builds anyOf and handles undefined 1`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchema": {
      "anyOf": [
        {
          "const": "a",
          "type": "string",
        },
        {
          "const": 2,
          "type": "integer",
        },
        {
          "const": 2.5,
          "type": "number",
        },
        {
          "const": true,
          "type": "boolean",
        },
        {
          "const": null,
          "type": "null",
        },
        {
          "const": "10",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`literal > handles only-undefined literal 1`] = `
{
  "$ref": "#/definitions/LiteralSchemaOnlyUndefined",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchemaOnlyUndefined": {},
  },
}
`;

exports[`literal > ignores unsupported literal values 1`] = `
{
  "$ref": "#/definitions/LiteralSchemaUnsupported",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchemaUnsupported": {},
  },
}
`;

exports[`literal > single literal uses const 1`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchema": {
      "const": "value",
      "type": "string",
    },
  },
}
`;
